--- a/_includes/header.html
+++ b/_includes/header.html
@@ -9,6 +9,8 @@
       <nav class="header__links">
         <div class="container header__links-wrapper">
           <a class="header__link" href="{{ '/' | relative_url }}" itemprop="url"><span itemprop="name">Home</span></a>
+          <a class="header__link" href="{{ '/blog' | relative_url }}" itemprop="url"><span itemprop="name">Blog</span></a>
+          <a class="header__link" href="{{ '/portfolio' | relative_url }}" itemprop="url"><span itemprop="name">Portfolio</span></a>
           <a class="header__link" href="{{ '/about' | relative_url }}" itemprop="url"><span itemprop="name">About</span></a>
           <a class="header__link" href="{{ '/contact' | relative_url }}" itemprop="url">
             <span itemprop="name">Contact</span>
