--- a/_sass/pages/_page.scss
+++ b/_sass/pages/_page.scss
@@ -89,6 +89,10 @@
   background-color: #f9f9f9;
 }
 
+.portfolio {
+  background-color: #f2f2f2;
+}
+
 .post-list {
   padding-top: 2.5em;
   display: flex;
