--- a/_includes/long-card.html
+++ b/_includes/long-card.html
@@ -1,15 +1,15 @@
 <a class="blog-card" href="{{ post.url | relative_url }}" itemprop="blogPosts" itemscope="" itemtype="http://schema.org/BlogPosting">
     <h2>{{ post.title | strip_html | truncate: 100 }}</h2>
 
-    {% if post.featured-img %}
+    {% if post.featured-img-banner %}
     <figure class="post-card__thumb image-height">
             <img
-                    src="{{site.url}}/assets/img/posts/{{post.featured-img}}.jpg",
-                    data-srcset="{{site.url}}/assets/img/posts/{{post.featured-img}}_thumb.jpg, {{site.url}}/assets/img/posts/{{post.featured-img}}_thumb@2x.jpg 2x"
+                    src="{{site.url}}/assets/img/posts/{{post.type}}/{{post.directory}}/{{post.featured-img-banner}}.jpg",
+                    data-srcset="{{site.url}}/assets/img/posts/{{post.type}}/{{post.directory}}/{{post.featured-img-banner}}.jpg"
                     class="lazyload blur image-height"
                     alt="{{post.title}}"
             />
-            <noscript><img src="{{site.url}}/assets/img/posts/{{post.featured-img}}_thumb.jpg" alt="{{ post.title }}"></noscript>
+            <noscript><img src="{{site.url}}/assets/img/posts/{{post.type}}/{{post.directory}}/{{post.featured-img-banner}}.jpg" alt="{{ post.title }}"></noscript>
     </figure>
     {% else %}
     <figure class="post-card__thumb image-height">
