--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -20,7 +20,7 @@ layout: compress
 
   {% if page.featured-img %}
 
-  <div class="hero lazyload" data-bg="{{site.url}}/assets/img/posts/{{page.featured-img}}.jpg">
+  <div class="hero lazyload paralax" data-bg="{{site.url}}/assets/img/posts/{{page.type}}/{{page.directory}}/{{page.featured-img}}.jpg">
     {% else %}
     <div class="hero dark-bg">
       {% endif %}
@@ -47,9 +47,7 @@ layout: compress
   <main class="site__content">
     <div class="container">
       <article class="post-content" itemprop="articleBody">
-
         {{ content }}
-
       </article>
       <div class="post-content controls__inner">
         <div class="controls__item prev">
