--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -26,7 +26,7 @@ layout: compress
     <main class="site__content">
 
       <div class="container">
-        <div class="page-content">
+        <div>
 
           {{ content }}
 
