--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -47,6 +47,8 @@ layout: compress
   <main class="site__content">
     <div class="container">
       <article class="post-content" itemprop="articleBody">
+        <i>{{page.summary}}</i>
+        <br><br>
         {{ content }}
       </article>
       <div class="post-content controls__inner">
