--- a/_sass/layout/_footer.scss
+++ b/_sass/layout/_footer.scss
@@ -3,10 +3,10 @@ footer {
   border-top: 1px solid #f0f0f0;
   text-align: center;
   font-size: 0.875rem;
-  color: rgba(33,33,33,0.6);
+  color: red;
 
   a {
-    color: rgba(33,33,33,0.6);
+    color: red;
     border-bottom: 0;
 
     &:hover {
