--- a/_includes/long-card.html
+++ b/_includes/long-card.html
@@ -28,7 +28,11 @@
         <p>{{ post.content | strip_html | truncatewords:100 }}</p>
         {% endif %}
     </div>
-    {% include social-links.html %}
+
+
+        <div class="social-links">
+            {% include social-links.html %}
+        </div>
     <hr>
     <br>
 </a>
